ci(macos): use vcpkg
Signed-off-by: Seth Flynn <getchoo@tuta.io>

--- a/.github/actions/setup-dependencies/macos/action.yml
+++ b/.github/actions/setup-dependencies/macos/action.yml
@@ -1,5 +1,11 @@
 name: Setup macOS dependencies
 
+inputs:
+  build-type:
+    description: Type for the build
+    required: true
+    default: Debug
+
 runs:
   using: composite
 
@@ -14,3 +20,29 @@ runs:
       shell: bash
       run: |
         echo "JAVA_HOME=$(/usr/libexec/java_home -v 17)" >> "$GITHUB_ENV"
+
+    - name: Setup vcpkg cache
+      if: ${{ inputs.build-type == 'Debug' }}
+      shell: bash
+      env:
+        USERNAME: ${{ github.repository_owner }}
+        GITHUB_TOKEN: ${{ github.token }}
+        FEED_URL: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+      run: |
+        mono `vcpkg fetch nuget | tail -n 1` \
+          sources add \
+          -Source "$FEED_URL" \
+          -StorePasswordInClearText \
+          -Name GitHubPackages \
+          -UserName "$USERNAME" \
+          -Password "$GITHUB_TOKEN"
+        mono `vcpkg fetch nuget | tail -n 1` \
+          setapikey "$GITHUB_TOKEN" \
+          -Source "$FEED_URL"
+        echo "VCPKG_BINARY_SOURCES=clear;nuget,$FEED_URL,readwrite" >> "$GITHUB_ENV"
+
+    - name: Setup vcpkg environment
+      if: ${{ inputs.build-type == 'Debug' }}
+      shell: bash
+      run: |
+        echo "CMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake" >> "$GITHUB_ENV"
