build(vcpkg): patch meson to support universal binaries
tomlplusplus uses Meson as a build system, which makes us come across a
small bug when building Universal Binaries with our custom triplet

I hate vendoring this

Signed-off-by: Seth Flynn <getchoo@tuta.io>

--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -11,6 +11,9 @@
       "name": "microsoft"
     }
   ],
+  "overlay-ports": [
+    "./cmake/vcpkg-ports"
+  ],
   "overlay-triplets": [
     "./cmake/vcpkg-triplets"
   ]
