--- a/.github/actions/setup-dependencies/windows/action.yml
+++ b/.github/actions/setup-dependencies/windows/action.yml
@@ -25,6 +25,14 @@ runs:
         arch: ${{ inputs.vcvars-arch }}
         vsversion: 2022
 
+    - name: Setup Java (MSVC)
+      uses: actions/setup-java@v4
+      with:
+        # NOTE(@getchoo): We should probably stay on Zulu.
+        # Temurin doesn't have Java 17 builds for WoA
+        distribution: zulu
+        java-version: 17
+
     - name: Setup vcpkg cache (MSVC)
       if: ${{ inputs.msystem == '' && inputs.build-type == 'Debug' }}
       shell: pwsh
